--- a/to-do.html
+++ b/to-do.html
@@ -11,14 +11,28 @@
     <title>To Do List</title>
   </head>
   <body>
-        <nav class="navbar navbar-light bg-light">
-                <div class="nav-item">
-                  <a href="#"><h2>Hi </h2></a>
+        <nav class="navbar navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <div class="nav-item text-white">
+                    <h3>Home</h3></a>
                 </div>
-              </nav>
-      <div class="container text-center">
+                <div class="nav-item text-white">
+                    <h3>About</h3></a>
+                </div>
+                <div class="nav-item text-white">
+                    <h3>Contact</h3></a>
+                </div>
+                <div class="nav-item text-white">
+                    <h3>Sign Up</h3></a>
+                </div>
+                <div class="nav-item text-white">
+                    <h3>Login</h3></a>
+                </div>
+            </div>
+        </nav>
+        <div class="container text-center m-04">
           <h1>My List</h1>
-      </div>
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
