small JS app excercise on DOM

--- a/to-do.html
+++ b/to-do.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+      <style>
+      .nav-top {
+          margin-top: 10%;
+      }
+      </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,8 +35,11 @@
                 </div>
             </div>
         </nav>
-        <div class="container text-center m-04">
-          <h1>My List</h1>
+
+        <div class="main">
+            <div class="container text-center nav-top">
+              <h3>My List</h3>
+            </div>
         </div>
 
     <!-- Optional JavaScript -->
