--- a/to-do.html
+++ b/to-do.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <style>
-      .nav-top {
-          margin-top: 10%;
-      }
-      </style>
+    
+      <link rel="stylesheet" href="todos.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,9 +33,14 @@
             </div>
         </nav>
 
-        <div class="main">
-            <div class="container text-center nav-top">
+        <div class="main nav-top">
+            <div class="container">
               <h3>My List</h3>
+              <ul>
+                  <li>Wash Cat</li>
+                  <li>Feed Cats</li>
+                  <li>Feed Dog</li>
+              </ul>
             </div>
         </div>
 
