--- a/color-game/colorGame.html
+++ b/color-game/colorGame.html
@@ -5,7 +5,10 @@
     <title>Color Game</title>
 </head>
 <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <div id="topPart">
+        <h1>The Great <span id="colorDisplay">RGB</span> Color Game
+        </h1>
+    </div>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
