--- a/color-game/colorGame.html
+++ b/color-game/colorGame.html
@@ -8,6 +8,7 @@
     <div id="topPart">
         <h1>The Great <span id="colorDisplay">RGB</span> Color Game
         </h1>
+        <span id="message"></span>
     </div>
     <div id="container">
         <div class="square"></div>
