--- a/color-game/colorGame.html
+++ b/color-game/colorGame.html
@@ -5,11 +5,14 @@
     <title>Color Game</title>
 </head>
 <body>
-    <div id="topPart">
-        <h1>The Great <span id="colorDisplay">RGB</span> Color Game
-        </h1>
+    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easy">Easy</button>
+        <button id="hard" class="selected">Hard</button>
     </div>
+
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
